<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scheduling"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButtonGreen"
    tools:context="com.iot.ece.greenbot.SchedulingActivity">

    <android.support.percent.PercentRelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/alarms"
            app:layout_marginTopPercent="20%"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="50%"
            app:layout_marginLeftPercent="25%"
            />

        <Button
            android:text="@string/adjust_schedule"
            android:theme="@style/MyButton"
            app:layout_widthPercent="50%"
            app:layout_heightPercent="20%"
            app:layout_marginTopPercent="50%"
            app:layout_marginLeftPercent="25%"
            android:id="@+id/button_schedule"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/schedule_text"
            app:layout_marginTopPercent="90%"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%"
            android:text="@string/sunlight_level_title"
            android:gravity="center_horizontal"
            android:textColor="@color/colorButtonTextWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:contentDescription="@string/info"/>




    </android.support.percent.PercentRelativeLayout>






</RelativeLayout>
