<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButtonGreen"
    tools:context="com.iot.ece.greenbot.HomeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <android.support.percent.PercentRelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/leaf_icon_button"
            app:layout_marginTopPercent="25%"
            app:layout_marginLeftPercent="30%"
            app:layout_aspectRatio="100%"
            app:layout_widthPercent="40%"
            android:layout_gravity="center"
            android:src="@drawable/leaf_icon_resized2"
            android:shape="oval"
            android:contentDescription="@string/leaf_icon"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@null"
        />

        <ProgressBar
            android:id="@+id/progressBar"
            app:layout_marginTopPercent="15%"
            app:layout_aspectRatio="100%"
            app:layout_marginLeftPercent="15%"
            app:layout_widthPercent="70%"
            android:max="500"
            android:progress="0"
            android:progressDrawable="@drawable/circular" />


        <TextView
            android:id="@+id/fullscreen_content"
            app:layout_marginTopPercent="65%"
            android:layout_width="match_parent"
            app:layout_heightPercent="15%"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/water_instruction"
            android:fontFamily="sans-serif"
            android:typeface="sans" />


        <TextView
        android:id="@+id/result_text"
        app:layout_marginTopPercent="70%"
        android:layout_width="match_parent"
        app:layout_heightPercent="15%"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:typeface="sans" />

        <Button
            android:text="@string/info"
            android:theme="@style/MyButton"
            app:layout_widthPercent="50%"
            app:layout_heightPercent="10%"
            app:layout_marginLeftPercent="50%"
            app:layout_marginTopPercent="90%"
            android:id="@+id/button_info"
            android:layout_weight="1" />

        <Button
            android:text="@string/setting"
            android:theme="@style/MyButton"
            app:layout_widthPercent="50%"
            app:layout_heightPercent="10%"
            app:layout_marginTopPercent="90%"
            android:id="@+id/button_setting"
            android:layout_weight="1" />

    </android.support.percent.PercentRelativeLayout>
</FrameLayout>
