<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButtonGreen"
    android:theme="@style/FullscreenTheme"
    tools:context="com.iot.ece.greenbot.InfoActivity">


    <android.support.percent.PercentRelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/moisture_level_chart"
            app:layout_marginTopPercent="0%"
            app:layout_heightPercent="40%"
            app:layout_widthPercent="100%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info" />

        <TextView
            android:id="@+id/moisture_level_text"
            app:layout_marginTopPercent="40%"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%"
            android:text="@string/moisture_level_title"
            android:gravity="center_horizontal"
            android:textColor="@color/colorButtonTextWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:contentDescription="@string/info"/>

        <ImageView
            android:id="@+id/sunlight_level_chart"
            app:layout_marginTopPercent="50%"
            app:layout_heightPercent="40%"
            app:layout_widthPercent="100%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info"/>

        <TextView
            android:id="@+id/sunlight_level_text"
            app:layout_marginTopPercent="90%"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%"
            android:text="@string/sunlight_level_title"
            android:gravity="center_horizontal"
            android:textColor="@color/colorButtonTextWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:contentDescription="@string/info"/>

    </android.support.percent.PercentRelativeLayout>

</RelativeLayout>
